--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ s0.parentNode.insertBefore(s1,s0);
     <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
 
     <div class="profile-pic-wrapper">
-        <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
+        <img src="profile.jpg" alt="Profile Picture" class="profile-pic" id="indexProfilePic">
 
         <div class="profile-status-container">
             <span class="profile-status">🟢</span>
@@ -109,11 +109,11 @@ s0.parentNode.insertBefore(s1,s0);
     </div>
 
     <div class="username-checkmark">
-        <h1>Bus Army Dude</h1>
+        <h1 id="indexUsername">Bus Army Dude</h1>
         <img src="check.png" alt="Verified" class="verified">
     </div>
-    <p>CURRENT PRESIDENT: Trump (2025-2029)</p>
-    <p>POLITICAL PARTY: Republican</p>
+    <p id="indexBioLine1">CURRENT PRESIDENT: Trump (2025-2029)</p>
+    <p id="indexBioLine2">POLITICAL PARTY: Republican</p>
 
     <button class="weather-button" aria-label="Weather" onclick="window.location.href='weather.html'"></button>
 </div>
