--- a/admin.html
+++ b/admin.html
@@ -63,19 +63,7 @@ POLITICAL PARTY: Republican</textarea>
                     <form id="add-social-link-form">
                         <div class="form-group">
                             <label for="platform">Platform:</label>
-                            <select id="platform">
-                                <option value="">Select Platform</option>
-                                <option value="tiktok">TikTok</option>
-                                <option value="snapchat">Snapchat</option>
-                                <option value="x-twitter">X (Twitter)</option>
-                                <option value="threads">Threads</option>
-                                <option value="twitch">Twitch</option>
-                                <option value="facebook">Facebook</option>
-                                <option value="steam">Steam</option>
-                                <option value="discord">Discord</option>
-                                <option value="instagram">Instagram</option>
-                                <option value="amazon-music">Amazon Music</option>
-                                </select>
+                            <input type="text" id="platform" placeholder="e.g., TikTok, Snapchat, X (Twitter)">
                         </div>
                         <div class="form-group">
                             <label for="url">URL:</label>
