--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     
     <!-- Font Awesome CDN -->
     <script src="https://kit.fontawesome.com/ffa5e5607e.js" crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
     
     <!-- Meta tag to refresh the page every 300 seconds -->
     <meta http-equiv="refresh" content="300">
