--- a/admin.html
+++ b/admin.html
@@ -23,7 +23,7 @@
                 <li><a href="javascript:void(0);" onclick="switchTab('home')">Home</a></li>
                 <li><a href="javascript:void(0);" onclick="switchTab('shoutouts')">Shoutouts</a></li>
                 <li><a href="javascript:void(0);" onclick="switchTab('blog')">Blog</a></li>
-                <li><a href="javascript:void(0);" onclick="switchTab('merch')">Merch Store</a></li>
+                <li><a href="javascript:void(0);" onclick="switchTab('merch-store')">Merch Store</a></li>
                 <li><a href="javascript:void(0);" onclick="switchTab('settings')">Settings</a></li>
             </ul>
         </div>
@@ -31,7 +31,6 @@
         <div class="admin-content">
 
             <div id="home" class="admin-tab-content active">
-
                 <h2>Profile Section</h2>
                 <p>Modify your username, bio, and profile image.</p>
                 <div class="profile-section">
@@ -216,7 +215,7 @@ POLITICAL PARTY: Republican</textarea>
                 <p>Manage blog categories, posts, and display them in cards with their titles, descriptions, and images.</p>
             </div>
 
-            <div id="merch" class="admin-tab-content">
+            <div id="merch-store" class="admin-tab-content">
                 <h2>Merch Store</h2>
                 <p>Manage product categories, product details, stock, and pricing.</p>
             </div>
