--- a/admin.html
+++ b/admin.html
@@ -229,6 +229,6 @@ POLITICAL PARTY: Republican</textarea>
 
     </div>
 
-    <script src="admin.js"></script>
+    <script src="admin-portal.js"></script>
 </body>
 </html>
