--- a/index.html
+++ b/index.html
@@ -186,21 +186,21 @@ s0.parentNode.insertBefore(s1,s0);
         
      <div class="shoutouts-section">
     <h2 id="tiktok-header">TikTok Creator Shoutouts</h2>
-    <div id="tiktok-shoutouts">
+    <div id="tiktok-shoutouts-list">
         </div>
     <p id="tiktok-last-updated-index"></p>
 </div>
 
 <div class="shoutouts-section">
     <h2 id="instagram-header">Instagram Creator Shoutouts</h2>
-    <div id="instagram-shoutouts">
+    <div id="instagram-shoutouts-list">
         </div>
     <p id="instagram-last-updated-index"></p>
 </div>
 
 <div class="shoutouts-section">
     <h2 id="youtube-header">YouTube Creator Shoutouts</h2>
-    <div id="youtube-shoutouts">
+    <div id="youtube-shoutouts-list">
         </div>
     <p id="youtube-last-updated-index"></p>
 </div>
